[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["mint", "token"] }
mpl-token-metadata = { version = "3.2.0" }
circuit-breaker = { path = "./programs/circuit-breaker", features = ["cpi"] }
solana-security-txt = "1.1.1"