[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["mint", "token"] }
mpl-token-metadata = { version = "3.2.0" }
spl-governance = { rev = "0377e6452fef0c84148e2d4de6bef08dac7ca16e", git = "https://github.com/solana-labs/solana-program-library.git", version = "3.1.0", features = ["no-entrypoint"] }
account-compression-cpi = { rev = "b1f82333f192be622b0b8e82468d22572e137d40", git = "https://github.com/Max2405071139/account-compression-anchor-gen", features = ["cpi"]}
bubblegum-cpi = { rev = "b1f82333f192be622b0b8e82468d22572e137d40", git = "https://github.com/Max2405071139/account-compression-anchor-gen", features = ["cpi"]}
circuit-breaker = { path = "./programs/circuit-breaker", features = ["cpi"] }
solana-security-txt = "1.1.1"