[package]
name = "brusho-nft-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "brusho_nft_manager"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
account-compression-cpi = { rev = "b1f82333f192be622b0b8e82468d22572e137d40", git = "https://github.com/Max2405071139/account-compression-anchor-gen", features = ["cpi"]}
bubblegum-cpi = { rev = "b1f82333f192be622b0b8e82468d22572e137d40", git = "https://github.com/Max2405071139/account-compression-anchor-gen", features = ["cpi"]}
spl-governance = { rev = "0377e6452fef0c84148e2d4de6bef08dac7ca16e", git = "https://github.com/solana-labs/solana-program-library.git", version = "3.1.0", features = ["no-entrypoint"] }
