[package]
name = "brusho-nft-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "brusho_nft_manager"

[features]
devnet = []
no-genesis = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
account-compression-cpi = { workspace = true }
bubblegum-cpi = { workspace = true }
spl-governance = { workspace = true }
